--- a/project-two/style.css
+++ b/project-two/style.css
@@ -1,3 +1,12 @@
+html {
+  scroll-behavior: smooth;
+}
+
+.landing {
+  width: 100%;
+  margin: auto;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -11,9 +20,18 @@ li {
     text-align: center;
 }
 
+.text {
+  text-align: left;
+}
+
+
 .landing {
     text-align: center;
     padding: 100px;
+}
+
+.h1 {
+  color: blueviolet;
 }
 
 .img {
@@ -28,13 +46,13 @@ li {
 
 .flex-left {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding-bottom: 100px;
 }
 
 .flex-center {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     padding-bottom: 100px;
 }
 
