--- a/project-two/style.css
+++ b/project-two/style.css
@@ -7,6 +7,11 @@ html {
   margin: auto;
 }
 
+.landing h1 {
+  height: 90vh;
+  padding: 80px;
+}
+
 
 /* 
 font-family: 'Work Sans', sans-serif;
@@ -31,13 +36,23 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
   }
 
 li {
-    float: left;
-    display: block;
     padding: 8px;
     text-align: center;
+    flex: 1;
+}
+
+nav a {
+  color: black ;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: rgb(133, 133, 133) ;
 }
 
 .text {
