--- a/project-two/style.css
+++ b/project-two/style.css
@@ -12,8 +12,9 @@ html {
   padding: 110px;
   margin-top: 50px;
 }
-
-
+.title {
+  font-weight: bold;
+}
 /* 
 font-family: 'Work Sans', sans-serif;
 weight 200 extra light
@@ -23,7 +24,7 @@ weight 500 mdium italics
 */
 
 body {
-  font-family:'Work Sans';
+  font-family: 'Work Sans';
   font-weight: 500;
   font-style: italic;
 }
@@ -39,71 +40,82 @@ p {
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+}
 
 li {
-    padding: 8px;
-    text-align: center;
-    flex: 1;
+  padding: 8px;
+  text-align: center;
+  flex: 1;
 }
 
 nav a {
-  color: rgb(133, 133, 133) ;
+  color: rgb(133, 133, 133);
   text-decoration: none;
   font-style: normal;
   font-weight: 200;
 }
 
 nav a:hover {
-  color: black ;
+  color: black;
 }
 
 .text {
   text-align: left;
 }
 
-
 .landing {
-    text-align: center;
-    font-size: 50px;
-    padding: 100px;
+  text-align: center;
+  font-size: 50px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
-
+section {
+  width: 100%;
+  padding-top: 60px;
+}
+section > div {
+  width: 80%;
+  margin: auto;
+}
 .flex-right {
-    display: flex;
-    justify-content: flex-end;
-    padding-bottom: 100px;
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 100px;
 }
 
 .flex-left {
-    display: flex;
-    justify-content: flex-start;
-    padding-bottom: 100px;
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 100px;
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 100px;
 }
 
 .flex-right img {
-    padding-left: 30px;
-  }
+  padding-left: 30px;
+}
 .flex-left img {
-    padding-right: 30px;
-  }
+  padding-right: 30px;
+}
+.flex-right figcaption {
+  margin-left: 30px;
+}
+.flex-left figcaption {
+  margin-right: 30px;
+}
 .flex-center {
-    padding: 30px;
+  padding: 30px;
 }
 
 .flex-right div,
@@ -112,14 +124,14 @@ img {
 }
 
 .flex-right img {
-    padding-left: 30px;
-  }
+  padding-left: 30px;
+}
 .flex-left img {
-    padding-right: 30px;
-  }
+  padding-right: 30px;
+}
 .flex-center img {
-    padding-left: 20;
-    padding-right: 20px;
+  padding-left: 20;
+  padding-right: 20px;
 }
 
 figcaption {
